<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:context=".ui.WelcomeFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textAppearance="@android:style/TextAppearance.Material.Display1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_description"
            android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle" />


        <Button
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            android:text="@string/continue_btn_txt" />
    </LinearLayout>
</layout>